--- a/TelaProfessorEnzo/src/main/java/br/granado/mavenproject1/ViewProfessor.form
+++ b/TelaProfessorEnzo/src/main/java/br/granado/mavenproject1/ViewProfessor.form
@@ -19,6 +19,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowOpened" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowOpened"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -39,11 +42,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
-              <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
-              <Component id="jPanel2" min="744" pref="744" max="-2" attributes="0"/>
-              <EmptySpace pref="24" max="32767" attributes="0"/>
-          </Group>
+          <Component id="jPanel2" alignment="0" pref="788" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -68,27 +67,30 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="0" pref="459" max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="356" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
-                  <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnRanking7Ano" min="-2" pref="245" max="-2" attributes="0"/>
+                              <Component id="btnRanking6Ano" min="-2" pref="245" max="-2" attributes="0"/>
+                              <Component id="btnRanking8Ano" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
+                              <Component id="btnRanking9Ano" min="-2" pref="245" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="btnRanking1EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
+                              <Component id="btnRanking2EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
+                              <Component id="btnRanking3EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="0" pref="459" max="32767" attributes="0"/>
+                          <Component id="jLabel1" min="-2" pref="356" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="110" max="-2" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
                   <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnRanking7Ano" min="-2" pref="245" max="-2" attributes="0"/>
-                      <Component id="btnRanking6Ano" min="-2" pref="245" max="-2" attributes="0"/>
-                      <Component id="btnRanking8Ano" alignment="0" min="-2" pref="245" max="-2" attributes="0"/>
-                      <Component id="btnRanking9Ano" min="-2" pref="245" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnRanking2EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
-                      <Component id="btnRanking1EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
-                      <Component id="btnRanking3EMAno" alignment="1" min="-2" pref="245" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -118,15 +120,15 @@
                           <Component id="btnRanking9Ano" min="-2" pref="68" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                           <Component id="btnRanking1EMAno" min="-2" pref="68" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
                           <Component id="btnRanking2EMAno" min="-2" pref="68" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
                           <Component id="btnRanking3EMAno" min="-2" pref="76" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="92" max="32767" attributes="0"/>
+                  <EmptySpace pref="136" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
